# reasongl-android

./: .gitignore  .merlin  Makefile  Readme.md  build-reasongl.sh  build.sh  doit.sh  install_32_arm64.sh  matchenv  matchenv.ppx  package.json  reasongl-interface  reprocessing  run.sh  run_in_adb.sh  setup_opam.sh  test_pcre.ml  trying.sh
32bit/: doit32.sh  fork32.sh  tryrun.sh
android/: build.gradle
android-ndk/hello-libs/app/: build.gradle
android-ndk/hello-libs/app/src/main/: AndroidManifest.xml
android-ndk/hello-libs/app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp
android-ndk/hello-libs/app/src/main/java/com/example/hellolibs/: MainActivity.java
android-ndk/hello-libs/distribution/reasongl/include/: reasongl.h
android/src/main/: AndroidManifest.xml
android/src/main/java/com/jaredforsyth/reasongl/: MyAssetManager.java  OCamlBindings.java  ReasonGLView.java  ReasonglActivity.java
app/: PurpleRain.re
example-project/app/: build.gradle
example-project/app/src/main/cpp/: Android.mk  Application.mk  hello-libs.cpp
example-project/app/src/main/java/com/example/hellolibs/: MainActivity.java  MyAssetManager.java  OCamlBindings.java
example-project/distribution/reasongl/include/: reasongl.h
example/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
example/app/src/androidTest/java/com/jaredforsyth/reasonglexample/: ExampleInstrumentedTest.java
example/app/src/main/: AndroidManifest.xml
example/app/src/main/cpp/: native-lib.cpp  reasongl_bindings.c
example/app/src/main/java/com/jaredforsyth/reasonglexample/: MainActivity.java
example/app/src/main/res/layout/: activity_main.xml
example/app/src/main/res/values/: strings.xml
example/app/src/test/java/com/jaredforsyth/reasonglexample/: ExampleUnitTest.java
example/gradle/wrapper/: gradle-wrapper.properties
src/: App.ml  Bindings.re  CBindings.c  CTgls.c  CTgls_new.c  Capi.re  CforJava.c  CforOCaml.c  FlappyBird.re  GLConstants.re  Hello.ml  MLforJava.re  RGLConstants_torm.re  Reasongl.re  Reasongl_Hotreload.re  Reprocessing_lite.re  Reprocessing_lite_Draw.re  Reprocessing_lite_Utils.re  Tgls.re  Tgls_new.re  bigarray_stubs.c  mmap_unix.c
src/jaredforsyth/reasongl/: OCamlBindings.java  ReasonGLView.java
stub/: Capi.ml  CforJava.c  CforOCaml.c  MLforJava.ml  bindings.ml  hello.c  hello.h
